--- a/RockWeb/Styles/rock-components/pickers.less
+++ b/RockWeb/Styles/rock-components/pickers.less
@@ -468,3 +468,14 @@
   }
 }
 
+.ant-select-arrow:has(.fa.fa-plus-square) {
+  font-size: 24px !important;
+  color: var(--color-info-strong);
+  top: 35%;
+  right: 17px;
+  transition: ease-in-out 0.2s;
+}
+
+.ant-select-arrow:has(.fa.fa-plus-square):hover {
+  color: var(--color-info-soft);
+}
