- Change personPicker popup from fullscreen to a modal.

--- a/RockWeb/Styles/Bootstrap/buttons.less
+++ b/RockWeb/Styles/Bootstrap/buttons.less
@@ -166,3 +166,12 @@ input[type="button"] {
     width: 100%;
   }
 }
+
+.tox .tox-tbtn--select.btn-link span {
+  font-weight: 400;
+  color: var(--color-info-strong);
+}
+
+.ant-select-selector .ant-select-selection-overflow .btn-link {
+  color: var(--color-interface-soft);
+}
