- minor change CSS for panel consistency.

--- a/RockWeb/Styles/_rock-obsidian.less
+++ b/RockWeb/Styles/_rock-obsidian.less
@@ -74,7 +74,7 @@
       margin: 0;
 
       > .action {
-        padding: 10px;
+        padding-right: 16px;
         margin: 2px;
         color: #616161;
         transition: color .2s, background-color .2s, border-radius .2s;
