- Pull change in from less.

--- a/RockWeb/Styles/style-v2/rock-components/_pickers.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_pickers.scss
@@ -498,4 +498,13 @@ textarea,
   width: 270px;
 }
 
-
+.ant-select-arrow:has(.fa.fa-plus-square) {
+  font-size: 24px !important;
+  color: var(--color-info-strong);
+  top: 35%;
+  right: 17px;
+  transition: ease-in-out 0.2s;
+}
+.ant-select-arrow:has(.fa.fa-plus-square):hover {
+  color: var(--color-info-soft);
+}
