--- a/RockWeb/Styles/style-v2/components/_buttons.scss
+++ b/RockWeb/Styles/style-v2/components/_buttons.scss
@@ -878,3 +878,11 @@ input[type="button"] {
 //     box-shadow: 0 0 0 @btn-focus-width fade(@border, 50%);
 //   }
 // }
+
+.tox .tox-tbtn--select.btn-link span {
+  font-weight: 400;
+  color: var(--color-info-strong);
+}
+.ant-select-selector .ant-select-selection-overflow .btn-link {
+  color: var(--color-interface-soft);
+}
