--- a/RockWeb/Styles/style-v2/rock-components/_rock-obsidian.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_rock-obsidian.scss
@@ -79,7 +79,7 @@
       margin: 0;
 
       > .action {
-        padding: 10px;
+        padding-right: 16px;
         margin: 2px;
         color: var(--color-interface-strong);
         transition: color .2s, background-color .2s, border-radius .2s;
