--- a/RockWeb/Styles/style-v2/components/_buttons.scss
+++ b/RockWeb/Styles/style-v2/components/_buttons.scss
@@ -197,7 +197,7 @@
   }
   &:hover {
     color:            var(--color-interface-stronger);
-    background-color: var(--color-interface-soft);
+    background-color: var(--color-interface-softer);
     border-color:     var(--color-interface-medium);
   }
   &:active,
