--- a/RockWeb/Styles/style-v2/components/_panels.scss
+++ b/RockWeb/Styles/style-v2/components/_panels.scss
@@ -574,7 +574,7 @@
   border-color:             var(--color-interface-softer);
 
   & > .panel-heading {
-    color:                  var(--color-info-strong);
+    color:                  var(--color-interface-stronger);
     background-color:       var(--color-interface-softer);
     border-color:           var(--color-interface-softer);
 
