--- a/RockWeb/Styles/style-v2/rock-components/_kpi.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_kpi.scss
@@ -175,7 +175,7 @@
   padding-left:             .4em;
   font-size:                .6em;
   font-weight:              var(--font-weight-regular);
-  color:                    var(--color-interface-soft);
+  color:                    var(--color-interface-medium);
 }
 // ====================== END STAT & VALUE ======================
 
