--- a/RockWeb/Styles/Blocks/Steps/PersonProgramStepList.css
+++ b/RockWeb/Styles/Blocks/Steps/PersonProgramStepList.css
@@ -24,9 +24,9 @@
   float: left;
   width: calc(100% / var(--stepsPerRowMobile, 4));
   min-height: 1px;
-  padding-right: calc(var(--gutter-x) * .5);
-  padding-left: calc(var(--gutter-x) * .5);
-  margin-bottom: calc(var(--gutter-x) * .5);
+  padding-right: calc(30px * .5);
+  padding-left: calc(30px * .5);
+  margin-bottom: calc(30px * .5);
 }
 
 @media (min-width: 1200px) {
