--- a/RockWeb/Styles/style-v2/blocks/_blocks-crm.scss
+++ b/RockWeb/Styles/style-v2/blocks/_blocks-crm.scss
@@ -196,7 +196,7 @@ $badge-count-width: 18px;
 }
 
 .rockbadge-fraction {
-  color:            var(--color-interface-medium);
+  color:            var(--color-interface-softer);
 
   &::before {
     display:        block;
@@ -536,7 +536,7 @@ $badge-count-width: 18px;
   height:         40px;
   padding:        0;
   margin:         0;
-  color:          var(--color-link-strong);
+  color:          var(--color-interface-soft);
   list-style:     none;
 
   &-sm {
