--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -66,6 +66,7 @@
 @import 'components/navs';                  // Fully Format. There are Some hard coded value.
 @import 'components/navbar';                // Fully Format. There are Some hard coded value.
 @import 'components/colorpicker';
+@import 'components/responsive-utilities';
 
 
 /* ======================= ROCK COMPONENTS ======================*/
@@ -121,6 +122,7 @@
 @import 'rock-components/rock-obsidian';
 @import 'rock-components/dragula';
 @import 'rock-components/color-selector';
+@import 'rock-components/profile';
 
 
 /* ===================== BLOCK =================== */
