--- a/RockWeb/Styles/style-v2/font-styling/_stacked.scss
+++ b/RockWeb/Styles/style-v2/font-styling/_stacked.scss
@@ -10,14 +10,14 @@
   width: 2em;
 }
 
-.fa-stack-1x, fa-stack-2x {
+
+.fa-stack-1x { line-height: inherit; }
+.fa-stack-2x { font-size: 2em; }
+.fa-inverse { color: var(--color-interface-softest); }
+
+.fa-stack-1x, .fa-stack-2x {
   left: 0;
   position: absolute;
   text-align: center;
   width: 100%;
 }
-
-.fa-stack-1x { line-height: inherit; }
-.fa-stack-2x { font-size: 2em; }
-.fa-inverse { color: var(--color-interface-softest); }
-  
