--- a/RockWeb/Styles/style-v2/rock-components/_labels.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_labels.scss
@@ -17,7 +17,7 @@
 
 .label-campus {
   color:            var(--color-interface-softest);
-  background-color: var(--color-campus);
+  background-color: var(--color-secondary);
 }
 
 .label-type {
