--- a/RockWeb/Styles/style-v2/utilities/_colors.scss
+++ b/RockWeb/Styles/style-v2/utilities/_colors.scss
@@ -23,7 +23,7 @@
 
 /* SYSTEM COLORS */
 .color-primary   { color: var(--color-primary); }
-.color-campus    { color: var(--color-campus); }
+.color-secondary    { color: var(--color-secondary); }
 .color-link      { color: var(--color-link); }
 .color-link-hover { color: var(--color-link-hover); }
 
