--- a/RockWeb/Styles/style-v2/utilities/_flex.scss
+++ b/RockWeb/Styles/style-v2/utilities/_flex.scss
@@ -8,6 +8,11 @@
   height: 100%;
 }
 
+.flex-1 {
+  flex: 1 1 0;
+  min-width: 50%;
+}
+
 @media (min-width: $screen-medium) {
   .row-eq-height-md {
     display: -webkit-flex;
