--- a/RockWeb/Styles/style-v2/utilities/_background.scss
+++ b/RockWeb/Styles/style-v2/utilities/_background.scss
@@ -25,7 +25,7 @@
 
 /* SYSTEM COLORS */
 .background-primary   { background-color: var(--color-primary); }
-.background-campus    { background-color: var(--color-campus); }
+.background-secondary    { background-color: var(--color-secondary); }
 .background-link      { background-color: var(--color-link); }
 .background-link-hover { background-color: var(--color-link-hover); }
 
