--- a/RockWeb/Styles/style-v2/utilities/_card.scss
+++ b/RockWeb/Styles/style-v2/utilities/_card.scss
@@ -75,7 +75,7 @@
   padding: .75rem 1.25rem;
   margin-top: 0; // DH: Remove BS3 margin-top of <hN>
   margin-bottom: 0; // Removes the default margin-bottom of <hN>
-  background-color: rgba(0,0,0,.03);
+  background-color: var(--color-interface-soft);
   border-bottom: 1px solid var(--color-interface-softer);
 
   &:first-child {
